# piecewise-funcs

./: .gitignore  LICENSE  README.md  demo.ipynb  demo.py  mypy.ini  pip_install_n_test.sh  pyproject.toml
piecewise_funcs/: __init__.py  piecewise_function.py  piecewise_generic.py
piecewise_funcs/constant/: piecewise_constant.py
piecewise_funcs/tests/: test_eval.py  test_from_funcdef.py  test_minmax_argminmax.py  test_time_complexity.py
piecewise_funcs/utils/: __init__.py  utils.py
